# job-post-nlp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
conf/: config.yaml
conf/prepare/settings/: full.yaml  small.yaml
conf/prepare/tdm/: n2_binary.yaml
conf/train/corex/: anchors.yaml  plain.yaml  sockin.yaml  worklife.yaml
conf/train/settings/: base.yaml
data/: .gitignore
output/: .gitignore  metrics.json  report.md  top_words.yaml
output/plots/: images.dvc
output/plots/custom/: Most Common Words.json  Number of Job Posts per Topic.json  TC.json  Total Correlation.json  n_docs_per_topic.json
outputs/: .gitignore
src/job_post_nlp/: dvc.yaml  evaluate.py  prepare.py  report.py  train.py
src/job_post_nlp/models/: most_common.py
src/job_post_nlp/preprocessing/: transform.py
src/job_post_nlp/utils/: find_project_root.py
tests/: test_foo.py
tests/job_post_nlp/utils/: test_utils.py
