[project]
name = "job-post-nlp"
version = "0.0.1"
description = "This is a template repository for Python projects that use uv for their dependency management."
authors = [
    { name = "Adam Hallengreen", email = "adamhallengreen@econ.ku.dk", website = "https://sites.google.com/view/adamhallengreen" },
    { name = "Asker Nygaard Christensen", email = "anc@econ.ku.dk", website =  "https://sites.google.com/view/askernygaardchristensen"}
]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12,<3.13"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "da-core-news-sm",
    "dvc>=3.59.1",
    "dvclive>=3.48.2",
    "matplotlib>=3.9.4",
    "pandas>=2.2.3",
    "polars[calamine]>=1.29.0",
    "polars-lts-cpu[calamine]>=1.26.0 ; sys_platform == 'darwin'",
    "pyyaml>=6.0.2",
    "spacy==3.8.3",
    "tqdm>=4.67.1",
    "scikit-learn>=1.6.1",
    "corextopic>=1.1",
    "scipy>=1.15.3",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
]

[project.urls]
Repository = "https://github.com/AdamHallengreen/job-post-nlp"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "ruff>=0.11.5",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.1",
    "notebook>=7.4.1",
    "types-pyyaml>=6.0.12.20250402",
    "types-tqdm>=4.67.0.20250417",
    "pandas-stubs>=2.2.3.250308",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
plugins = []

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
exclude = ["stubs"]

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.uv.sources]
da-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/da_core_news_sm-3.8.0/da_core_news_sm-3.8.0-py3-none-any.whl" }
